--- a/src/main/resources/static/css/m_bos.css
+++ b/src/main/resources/static/css/m_bos.css
@@ -1193,7 +1193,7 @@
     /* white-space: nowrap; */
 }
 .page-switch.page04{opacity:0;z-index:-999;overflow: visible;display: none;width:100%;}
-.page-switch.page04.on{opacity:1;z-index:999;overflow: hidden;display: block;width:100%;}
+    .page-switch.page04.on{opacity:1;z-index:999;display: block;width:100%;}
 .page-switch.page02_07{opacity:0;z-index:-999;overflow: visible;display: none;width:100%;}
 .page-switch.page02_07.on{opacity:1;z-index:999;display: block;width:100%;height: 95rem;}
 .page-switch.page03_01{opacity:0;z-index:-999;left: 0;overflow: visible;display: none;width:100%;}
@@ -2000,7 +2000,9 @@ input:read-only {
     width: 100%;
     padding: 2rem;
     position: relative;
-    border-right:0;
+    border-right: 0;
+    background: #fff;
+    border-radius: 2.4rem;
 }
 .select_wrap .page03_01 .select_items .items_tit {
     margin-top: 2rem;
@@ -2047,7 +2049,7 @@ input:read-only {
 .customSearch {
     position: absolute;
     left: 2rem;
-    top: 1rem;
+    top: -3.5rem;
     margin-bottom: 3rem;
     font-weight: 600;
     font-size: 1.6rem;
@@ -2074,5 +2076,31 @@ input:read-only {
 
 .page03_01 .exp_wrap {
     height: auto;
+}
+
+.innerpage01 {
+    position: absolute;
+    top: 50rem;
+    height: 21rem;
+    left: 0;
+    background: #fff;
+    width: 100%;
+    display: block;
+    border-radius: 2.4rem;
+    text-align: center;
+    line-height: 100%;
+    padding: 3rem;
+    justify-content: center;
+    font-size: 1.8rem;
+    line-height: 120%;
+}
+
+.page04 .innerpage01{
+    top: 53rem;
+}
+
+.customQ {
+    margin-bottom: 3rem;
+    margin-top: 0rem;
 }
 }
